add publish deployments
